# ray-tracing-engine

./: .gitignore  CMakeLists.txt  aabb.h  bvh.h  bvh_screen_mask.h  camera.h  color.h  hittable.h  hittable_list.h  i.ppm  interval.h  lod_wrapper.h  main.cpp  material.h  rtweekend.h  sphere.h  test.ppm  tiny_obj_loader.cpp  triangle.cpp  triangle.h  trianglemesh.h  vec3.h
